feat: add navigation menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,41 @@
 
 <body>
     <header>
-
+        <nav class="header-nav">
+            <ul>
+                <li>
+                    <a href="">Summary</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+                <li>
+                    <a href="">Skills</a>
+                </li>
+                <li>
+                    <a href="">Code example</a>
+                </li>
+                <li>
+                    <a href="">Learning project</a>
+                </li>
+                <li>
+                    <a href="">Education &amp; language</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="header-info">
+            <div class="header-avatar">
+                <img src="assets/avatar.jpg" alt="">
+            </div>
+            <div class="header-title">
+                <div class="header-name">
+                    <h1>Nebolsin Dmitrii</h1>
+                </div>
+                <div class="header-target">
+                    Junior frontend developer
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
