--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
         </div>
     </header>
     <main>
-
+        <section class="section">
+            <h2>Summary</h2>
+            <div class="section-content">
+                I’m a third-year student of ASU (Adyghe State University). The fourth semester
+                has already finished and it’s getting harder and harder for me not to feel I’m getting better day after
+                day. That is the main reason why I’ve decided to try something new (rs school). I hope my diligence and
+                the courses will help me to obtain useful knowledge.
+            </div>
+        </section>
+        <section class="section">
+            <h2>Contacts</h2>
+            <div class="section-content">
+                <ul class="contacts">
+                    <li class="contact">
+                        devdimonpok@gmail.com
+                    </li>
+                    <li class="contact">
+                        devdim311(discord)
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
