feat: add skills and code example sections

--- a/index.html
+++ b/index.html
@@ -70,6 +70,39 @@
                 </ul>
             </div>
         </section>
+        <section class="section">
+            <h2>Skills</h2>
+            <div class="section-content">
+                <ul class="skills">
+                    <li class="skill">
+                        C++
+                    </li>
+                    <li class="skill">
+                        Python
+                    </li>
+                    <li class="skill">
+                        Blender
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <h2>Code example</h2>
+            <div class="section-content">
+                <pre>
+                    <code>
+                    function toCamelCase(str){
+                        var arr = str.replace(/_/g, '-').split('-')
+                        for (let i = 1; i &lt; arr.length; i++)
+                          {
+                            arr[i] = arr[i][0].toUpperCase() + arr[i].slice(1)
+                          }
+                        return arr.join("")
+                    }
+                    </code>
+                </pre>
+            </div>
+        </section>
     </main>
     <footer>
 
