--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
                 </pre>
             </div>
         </section>
+        <section class="section">
+            <h2>Learning project</h2>
+            <div class="section-content">
+                <a href="https://github.com/DevDimon/labs">Repository with my laboratory work on the C++ course</a>
+            </div>
+        </section>
+        <section class="section">
+            <h2>Education &amp; language</h2>
+            <div class="section-content">
+                I am a 3rd year student majoring in computer science and engineering at ASU (Adyghe State University). <br>
+                English - A2
+            </div>
+        </section>
     </main>
     <footer>
 
