feat: add footer content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
         <div class="header-info">
             <div class="header-avatar">
-                <img src="assets/avatar.jpg" alt="">
+                <img src="assets/avatar.jpg" alt="My avatar">
             </div>
             <div class="header-title">
                 <div class="header-name">
@@ -117,8 +117,17 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="github">
+            <a href="https://github.com/DevDimon">My Github repo</a>
+        </div>
+        <div class="year">2024</div>
+        <div class="course-logo">
+            <img src="assets/rs-school-logo.svg" alt="RSS course logo">
+        </div>
+        <div class="course-link">
+            <a href="https://rs.school/courses/javascript-preschool-ru">JavaScript / Front-end Course Pre-school RU</a>
+        </div>
     </footer>
 </body>
 
