--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         <nav class="header-nav">
             <ul>
                 <li>
-                    <a href="">Summary</a>
+                    <a href="#summary">Summary</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a href="#contacts">Contacts</a>
                 </li>
                 <li>
-                    <a href="">Skills</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li>
-                    <a href="">Code example</a>
+                    <a href="#code">Code example</a>
                 </li>
                 <li>
-                    <a href="">Learning project</a>
+                    <a href="#project">Learning project</a>
                 </li>
                 <li>
-                    <a href="">Education &amp; language</a>
+                    <a href="#education">Education &amp; language</a>
                 </li>
             </ul>
         </nav>
@@ -50,7 +50,7 @@
         </div>
     </header>
     <main>
-        <section class="section">
+        <section id="summary" class="section">
             <h2>Summary</h2>
             <div class="section-content">
                 I’m a third-year student of ASU (Adyghe State University). The fourth semester
@@ -59,7 +59,7 @@
                 the courses will help me to obtain useful knowledge.
             </div>
         </section>
-        <section class="section">
+        <section id="contacts" class="section">
             <h2>Contacts</h2>
             <div class="section-content">
                 <ul class="contacts">
@@ -72,7 +72,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section id="skills" class="section">
             <h2>Skills</h2>
             <div class="section-content">
                 <ul class="skills">
@@ -88,7 +88,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section id="code" class="section">
             <h2>Code example</h2>
             <div class="section-content">
                 <pre>
@@ -105,13 +105,13 @@
                 </pre>
             </div>
         </section>
-        <section class="section">
+        <section id="project" class="section">
             <h2>Learning project</h2>
             <div class="section-content">
                 <a href="https://github.com/DevDimon/labs">Repository with my laboratory work on the C++ course</a>
             </div>
         </section>
-        <section class="section">
+        <section id="education" class="section">
             <h2>Education &amp; language</h2>
             <div class="section-content">
                 I am a 3rd year student majoring in computer science and engineering at ASU (Adyghe State University). <br>
