--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 <body>
     <header>
         <nav class="header-nav">
-            <ul>
-                <li>
+            <ul class="nav-list">
+                <li class="nav-link">
                     <a href="#summary">Summary</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#contacts">Contacts</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#skills">Skills</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#code">Code example</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#project">Learning project</a>
                 </li>
-                <li>
+                <li class="nav-link">
                     <a href="#education">Education &amp; language</a>
                 </li>
             </ul>
@@ -49,7 +49,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main-container">
         <section id="summary" class="section">
             <h2>Summary</h2>
             <div class="section-content">
@@ -93,14 +93,13 @@
             <div class="section-content">
                 <pre>
                     <code>
-                    function toCamelCase(str){
-                        var arr = str.replace(/_/g, '-').split('-')
-                        for (let i = 1; i &lt; arr.length; i++)
-                          {
-                            arr[i] = arr[i][0].toUpperCase() + arr[i].slice(1)
-                          }
-                        return arr.join("")
-                    }
+function toCamelCase(str) {
+    var arr = str.replace(/_/g, '-').split('-')
+    for (let i = 1; i &lt; arr.length; i++) {
+        arr[i] = arr[i][0].toUpperCase() + arr[i].slice(1)
+    }
+    return arr.join("")
+}
                     </code>
                 </pre>
             </div>
@@ -108,7 +107,7 @@
         <section id="project" class="section">
             <h2>Learning project</h2>
             <div class="section-content">
-                <a href="https://github.com/DevDimon/labs">Repository with my laboratory work on the C++ course</a>
+                <a class="link" href="https://github.com/DevDimon/labs">Repository with my laboratory work on the C++ course</a>
             </div>
         </section>
         <section id="education" class="section">
@@ -120,15 +119,13 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="github">
-            <a href="https://github.com/DevDimon">My Github repo</a>
+        <div class="github footer-item">
+            <a class="link" href="https://github.com/DevDimon">My Github repo</a>
         </div>
-        <div class="year">2024</div>
-        <div class="course-logo">
-            <img src="assets/rs-school-logo.svg" alt="RSS course logo">
-        </div>
-        <div class="course-link">
-            <a href="https://rs.school/courses/javascript-preschool-ru">JavaScript / Front-end Course Pre-school RU</a>
+        <div class="year footer-item">2024</div>
+        <div class="course-logo footer-item"></div>
+        <div class="course-link footer-item">
+            <a class="link" href="https://rs.school/courses/javascript-preschool-ru">JavaScript / Front-end Course Pre-school RU</a>
         </div>
     </footer>
 </body>
